--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,7 +2,9 @@
 
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}{% endblock %}
+{% block stylesheets %}
+{{parent()}}
+{% endblock %}
 
 {% block title %}Log in!{% endblock %}
 
