--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,35 +1,42 @@
-{# View du formulaire de Connexion #}
-
 {% extends 'base.html.twig' %}
-
-{% block stylesheets %}
-{{parent()}}
-{% endblock %}
 
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form class="formulaire" method="post">
+<form method="post">
     {% if error %}
-        <div class="alert alert-danger">Vous avez saisi un mauvais login ou un mauvais mot de passe</div>
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1 style="color:#fff">Connecte Toi :</h1>
-    <label for="inputUsername">Pseudo</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus style="margin-bottom:1em;">
-    <label for="inputPassword">Mot de passe</label>
+    {% if app.user %}
+        <div class="mb-3">
+            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+        </div>
+    {% endif %}
+
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="inputUsername">Username</label>
+    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
+    <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <div>
-        <a class="registration_link" href="{{path('register')}}">Je n'ai pas encore de compte</a>
-    </div>
+    {#
+        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        See https://symfony.com/doc/current/security/remember_me.html
 
-    <button class="btn-sucess" type="submit">
-        Connexion
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
+    #}
+
+    <button class="btn btn-lg btn-primary" type="submit">
+        Sign in
     </button>
 </form>
 {% endblock %}
