--- a/templates/adresse/index.html.twig
+++ b/templates/adresse/index.html.twig
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
+{% include 'base.html.twig' %}
 	<h1>Adresse index</h1>
 
     <label for="ville-select">Affichage par Ville:</label>
