--- a/templates/cadeau/index.html.twig
+++ b/templates/cadeau/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Cadeau index{% endblock %}
 
 {% block body %}
+{% include 'base.html.twig' %}
     <h1>Cadeau index</h1>
 
     <table class="table">
