--- a/templates/adresse/show.html.twig
+++ b/templates/adresse/show.html.twig
@@ -34,5 +34,7 @@
 
     <a href="{{ path('adresse_edit', {'id': adresse.id}) }}">edit</a>
 
+    {% if adresse.personne is empty %}
     {{ include('adresse/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
