--- a/templates/categorie/edit.html.twig
+++ b/templates/categorie/edit.html.twig
@@ -9,5 +9,8 @@
 
     <a href="{{ path('categorie_index') }}">back to list</a>
 
+    {% if categorie.cadeaux is empty %}
     {{ include('categorie/_delete_form.html.twig') }}
+    {% endif %}
+    
 {% endblock %}
